# prototype

./: LICENCE  pyproject.toml
backend/backend/: settings.py  urls.py
backend/journal/: admin.py  models.py  my_config.py  serializers.py  views.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: classes.module.css  theme.ts
frontend/src/components/Buttons/: Menu.tsx  RefreshButton.tsx  StdButton.tsx
frontend/src/components/Logo/: Logo.css  Logo.tsx
frontend/src/components/Windows/: JournalWindow.tsx  MainWindow.tsx  TrendsWindow.tsx
frontend/src/pages/: Home.page.tsx  plus.css  randomstuff.css
