[project]
name = "prototype-v0"
version = "0.1.0"
description = "Health self management data sharing platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-cors-headers>=4.6.0",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "psycopg[binary]>=3.2.3",
    "tqdm>=4.67.0",
]
